# Cafedra-AI-MALOFEEV-ALEXSANDR

./: .gitattributes  .gitignore  README.md
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb
homeworks/HW03/eda-cli/: README.md  pyproject.toml
homeworks/HW03/eda-cli/data/: test_data.csv
homeworks/HW03/eda-cli/reports_example/: report.md
homeworks/HW03/eda-cli/src/eda_cli/: cli.py  core.py  viz.py
homeworks/HW03/eda-cli/tests/: test_core.py
homeworks/HW04/eda-cli/: README.md  pyproject.toml
homeworks/HW04/eda-cli/data/: example.csv
homeworks/HW04/eda-cli/src/eda_cli/: api.py  cli.py  core.py
homeworks/HW05/: HW05.ipynb
homeworks/HW06/: HW06.ipynb  report.md
homeworks/HW06/artifacts/: best_model.joblib  metrics_test.csv  (+4 more)
homeworks/HW07/: HW07.ipynb  report.md
homeworks/HW08/: HW08.ipynb  report.md
homeworks/HW08-09/: HW08-09.ipynb  report.md
homeworks/HW10-11/: HW10-11.ipynb  report.md
homeworks/HW12/: HW12.ipynb  report.md
homeworks/HWO2/: HW02.ipynb
project/: .dockerignore  Dockerfile  README.md  report.md  requirements.txt  self-checklist.md
project/artifacts/: classification_report.txt  data_summary.json  experiment_results.csv  experiment_summary.json  metrics.json  ticket_classifier.joblib
project/configs/: .env.example  config.yaml
project/notebooks/: README.md  main.ipynb
project/src/: __init__.py  config.py  eda.py  evaluate.py  generate_dataset.py  predictor.py  preprocessing.py  schemas.py  service.py  train.py
project/tests/: conftest.py  test_api.py  test_dataset.py  test_predictor.py  test_preprocessing.py
(+14 files in other folders)
