[project]
name = "eda-cli"
version = "0.1.0"
description = "Мини EDA утилита — HW03"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "matplotlib",
]

[project.scripts]
eda-cli = "eda_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest",
]