[project]
name = "eda-cli"
version = "0.2.0"
description = "Мини EDA утилита с HTTP API — HW04"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "matplotlib",
    "typer",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
]

[project.scripts]
eda-cli = "eda_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest",
]